# motivator-rs

./: Cargo.toml  index.html  style.css
src/: main.rs
